[UPD] exercise-end

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <ul class="list-unstyled">
+                        <ul class="list-unstyled m-1">
                             <li v-for="email, index in emails" :key="index">
                                 {{ email }}
                             </li>
